v0.11
	* ADD : Open/Import multiple files
	* ADD : draw scale
	* FIX : upload order when merging nodes
	* FIX : warn when using wrong credentials
	* ADD : drag the map around with control key for poor Mac owners
	* FIX : We can now select the move tool everytime
	* FIX : Reverse on an area doesn't open it anymore 
	* FIX : Select dialog : fix the size of elements
	* FIX : Roundabout creation. Add tag junction=roundabout
	* FIX : Autoselect source in download dialog
	* ADD : Align nodes function
	* ADD : living_street as a predefined highway tag
	* FIX : use CoordBox method to zoom a little instead of calling zoom
	* ADD : caching mechanism for painters
	* ADD : draw nodes of hovered/selected roads (by Vincent Meurisse)
	* FIX : make the shortcuts for creating a new road and way less interfering
	* ADD : support for OSM links in download dialog (Refs #812) (by Timo Schlüßler)
	* ADD : shortcuts for zoom-in(+) and zoom-out(-) (by Timo Schlüßler)
	* FIX : keyboard modifiers: ctrl-click toggle; shift-click add; ctrl-add-click prevents road selection; shift-drag selects features which intersects
	* ADD : Information dock
	* ADD : Dock menu / shortcuts
	* ADD : different colors for focus and hover
	* ADD : Merkaartor icon
	* FIX : unified version handling
	* ADD : OpenTopoMap WMS server to list of defaults; OpenAerialMap as TMS (existed as WMS already)
	* ADD : "Download more" command. Adds to last download layer
	* ADD : per-layer "zoom all"
	* ADD : delete layer command
	* ADD : french translation
	* ADD : Merkaartor document (*.mdc)
	* FIX : Apply button in Preferences now updates the main window immediately
	* FIX : if a feature contains a node more than once, if the node is deleted, only the first occurence is removed
	* ADD : merge nodes function
	* FIX : don't ignore "width" tags on export
	* ADD : translation capabilities
	* FIX : Misaligned background after view resize
	* FIX : clipping problem with selected features during resize
	* FIX : NMEA import timestamps